2nd draft:  - Updates:     - charts     - deploy     - Dockerfile     - README  - Add:     - deployment.py

--- a/pelican/chart/templates/init-db.yaml
+++ b/pelican/chart/templates/init-db.yaml
@@ -9,5 +9,5 @@ data:
   init-db.sql: |
     CREATE USER 'pelicanuser'@'%' IDENTIFIED BY '{{ .Values.pelicandb.password }}';
     GRANT ALL PRIVILEGES ON *.* TO 'pelicanuser'@'%';
-    FLUSH PRIVILEGES
+    FLUSH PRIVILEGES;
  
