--- a/pelican/chart/values.yaml
+++ b/pelican/chart/values.yaml
@@ -16,7 +16,7 @@ pelicandb:
   replicas: 1
   image:
     repo: ""
-    tag: ""
+    tag: "1.0.1"
   port: 3306
   service:
     annotations: {}
@@ -24,13 +24,13 @@ pelicandb:
     targetPort: 3306
   password:
   livenessProbe:
-    initialDelaySeconds: 30
+    initialDelaySeconds: 90
     periodSeconds: 10
     timeoutSeconds: 5
     successThreshold: 1
     failureThreshold: 3
   readinessProbe:
-    initialDelaySeconds: 5
+    initialDelaySeconds: 30
     periodSeconds: 10
     timeoutSeconds: 1
     successThreshold: 1
